--- a/YURT-OTOMASYONU/Views/Personel/_AddFood.cshtml
+++ b/YURT-OTOMASYONU/Views/Personel/_AddFood.cshtml
@@ -1,34 +1,34 @@
-﻿
+﻿@model YURT_OTOMASYONU.Data.YemekListesi
+@using (Html.BeginForm("AddFood", "Personel", new { Area = String.Empty }, FormMethod.Post, new { role = "form" }))
+{
 <div class="col-xl-12">
     <div class="card">
         <div class="card-body">
             <div class="form-group">
                 <label for="yemek1">Yemek 1:</label>
-                <input type="text" id="yemek1" name="yemek1"><br><br>
+                @Html.TextBoxFor(m => m.Yemek1, new { @class = "form-control", placeholder = "Yemek 1 giriniz", required = "required" })
             </div>
             <div class="form-group">
                 <label for="yemek2">Yemek 2:</label>
-                <input type="text" id="yemek2" name="yemek2"><br><br>
+                @Html.TextBoxFor(m => m.Yemek2, new { @class = "form-control", placeholder = "Yemek 2 giriniz", required = "required" })
             </div>
             <div class="form-group">
                 <label for="yemek3">Yemek 3:</label>
-                <input type="text" id="yemek3" name="yemek3"><br><br>
+                @Html.TextBoxFor(m => m.Yemek3, new { @class = "form-control", placeholder = "Yemek 3 giriniz", required = "required" })
             </div>
             <div class="form-group">
                 <label for="yemek4">Yemek 4:</label>
-                <input type="text" id="yemek4" name="yemek4"><br><br>
+                @Html.TextBoxFor(m => m.Yemek4, new { @class = "form-control", placeholder = "Yemek 4 giriniz", required = "required" })
             </div>
         </div>
     </div>
 </div>
-<hr />
-<div class="form-group form-group-sm row">
-    <div class="col-xs-12">
-        <button class="btn btn-secondary" type="button" data-bs-dismiss="modal"><span style="color: white" class="fa fa-times"></span>&nbsp;&nbsp;Vazgeç</button>
-        <button type="submit" class="btn btn-success"><span style="color: white" class="fa fa-check"></span>&nbsp;&nbsp;Kaydet</button>
-    </div>
-</div>
-<div class="clearfix"></div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tagsinput/0.8.0/bootstrap-tagsinput.js"></script>
-
-
+                <hr />
+                                <div class="form-group form-group-sm row">
+                                    <div class="col-xs-12">
+                                        <button class="btn btn-secondary" type="button" data-bs-dismiss="modal"><span style="color: white" class="fa fa-times"></span>&nbsp;&nbsp;Vazgeç</button>
+                                        <button type="submit" class="btn btn-success"><span style="color: white" class="fa fa-check"></span>&nbsp;&nbsp;Kaydet</button>
+                                    </div>
+                                </div>
+                                                <div class="clearfix"></div>
+                                                                <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tagsinput/0.8.0/bootstrap-tagsinput.js"></script>}
