--- a/YURT-OTOMASYONU/Views/Personel/PersonelList.cshtml
+++ b/YURT-OTOMASYONU/Views/Personel/PersonelList.cshtml
@@ -36,8 +36,6 @@
             <h5>
                 Personel Listesi
             </h5>
-            Personel Ara:<input id="txtPersonelName" type="text" />
-            <button id="sendSearch">Ara</button>
             <table id="tblCustomers" class="table table-bordered">
                 <thead>
                     <tr>
@@ -59,21 +57,7 @@
                         </tr>
                     }
                 </tbody>
-            </table><nav style="align-items:center">
-                <ul style="place-content: center" class="pagination">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1">Geri</a>
-                    </li>
-                    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item ">
-                        <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">İleri</a>
-                    </li>
-                </ul>
-            </nav>
+            </table>
         </div>
     </div>
 </body>
@@ -82,7 +66,20 @@
 
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script type="text/javascript">$(function () {
+<script src="~/Scripts/jquery-3.6.0.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#tblCustomers').DataTable({
+            "language": {
+                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Turkish.json"
+            }
+        });
+    });</script>
+
+<script type="text/javascript">
+    $(function () {
 
         $("#sendSearch").click(function () {
             GetPersonel();
