Müdür Personel Sayfası Arama Backend #19 DataTable ile otomatik olarak yapılmıştır

--- a/YURT-OTOMASYONU/Views/Personel/PersonelList.cshtml
+++ b/YURT-OTOMASYONU/Views/Personel/PersonelList.cshtml
@@ -34,7 +34,7 @@
            class="btn btn-primary">
             Personel Ekle
         </a>
-
+        @*Müdür Personel Sayfası Arama Backend #19 DataTable ile otomatik olarak yapılmıştır*@
         <div style="margin-top:20px" class="container">
             <h5>
                 Personel Listesi
