Şifremi Unuttum Ekranı Tasarımı Tamamlandı  #6

--- a/YURT-OTOMASYONU/Views/Login/ForgotPassword.cshtml
+++ b/YURT-OTOMASYONU/Views/Login/ForgotPassword.cshtml
@@ -1,21 +1,33 @@
-﻿@*/Login/ForgotPassword*@
-
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-
-<html>
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>şifremi unuttum sayfası</title>
+    <title>PAROLAMI UNNUTUM</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div>
-        <h1>
-            şifremi unuttum sayfası
-        </h1>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center mt-3">
+                <h2>Şifremi Unuttum</h2>
+                <h5 class="mt-4">Parola Sıfırlamak için Sisteme Kayıtlı E-posta Adresinizi Giriniz</h5>
+                <br>
+                <div class="row">
+                    <div class="col-3"></div>
+                    <form class="col-6" action="." method="post">
+                        <div class="input-group mb-3 input-group-sm">
+                            <span class="input-group-text">E-posta : </span>
+                            <input type="text" class="form-control">
+                        </div>
+                        <button type="submit" class="btn btn-success">Gönder</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
